[package]
name = "lottery-nft"
version = "0.0.1"
description = "Solana lottery Program for NFTs"
authors = ["Hongbo Li"]
repository = "https://github.com/metaplex-foundation/metaplex"
license = "Apache-2.0"
edition = "2018"
exclude = ["tests/**"]

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
borsh = "0.9.1"
num-derive = "0.3"
num-traits = "0.2"
arrayref = "0.3.6"
solana-program = "1.7.8"
spl-token = { version="3.1.1", features = [ "no-entrypoint" ] }
thiserror = "1.0"
lottery-store = { path = "../../lottery-store/program", features = [ "no-entrypoint" ] }

[dev-dependencies]
solana-program-test = "1.7.8"
solana-sdk = "1.7.8"

[lib]
crate-type = ["cdylib", "lib"]
